[project]
name = "seedrcc"
dynamic = ["version"]
authors = [{ name = "Adnan Ahmad", email = "viperadnan@gmail.com" }]
description = "A comprehensive Python API wrapper for seedr.cc"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
]

[project.urls]
"Homepage" = "https://github.com/viperadnan-git/seedrcc-python-sdk"
"Documentation" = "https://seedrcc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/viperadnan-git/seedrcc-python-sdk/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.nizm.hooks]
generate-sync = { cmd = "uv run python scripts/generate_sync.py && git add seedrcc/client.py", glob = "seedrcc/async_client.py" }
ruff = { cmd = "uvx ruff check --fix {staged_files} && uvx ruff format {staged_files}", glob = "*.py" }

[tool.ruff.lint]
select = ["F", "I"]
fixable = ["F401", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
docs = [
  "griffe-fieldz>=0.3.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.17",
  "mkdocstrings[python]>=0.30.0",
]
