[project]
name = "seedrcc"
dynamic = ["version"]
authors = [{ name = "Adnan Ahmad", email = "viperadnan@gmail.com" }]
description = "A comprehensive Python API wrapper for seedr.cc"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.1",
]

[project.urls]
"Homepage" = "https://github.com/viperadnan-git/seedrcc-python-sdk"
"Bug Tracker" = "https://github.com/viperadnan-git/seedrcc-python-sdk/issues"

[build-system]
requires = ["hatchling", "hatch-vcs", "unasync>=0.6", "tokenize-rt>=6.0", "ruff>=0.15.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/seedrcc"]

[tool.hatch.build.targets.sdist]
include = ["src/seedrcc/**", "scripts/**", "README.md", "LICENSE", "pyproject.toml"]

[tool.nizm.hooks.gen_sync]
cmd = "uv run python scripts/gen_sync.py"
glob = [
    "src/seedrcc/legacy/async_client.py",
    "src/seedrcc/_async/**/*.py",
    "scripts/gen_sync.py",
]
outputs = [
    "src/seedrcc/legacy/client.py",
    "src/seedrcc/_sync/**/*.py",
]

[tool.nizm.hooks.ruff]
cmd = "uvx ruff check --fix {staged_files} && uvx ruff format {staged_files}"
glob = "*.py"

[tool.ruff.lint]
select = ["F", "I", "D"]
fixable = ["F401", "I", "D"]
pydocstyle = { convention = "google" }

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "unasync>=0.6",
    "tokenize-rt>=6.0",
]
